--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,41 @@
 
+@Article{	  marty2021fc,
+  author	= {Marty, Paul and Romoli, Jacopo},
+  journal	= {Linguistics and Philosophy},
+  title		= {Presupposed free choice and the theory of scalar
+		  implicatures},
+  year		= {2021}
+}
+
+@Book{		  el-madkouri2020traduccion,
+  address	= {Madrid},
+  author	= {El-Madkouri Maataoui, Mohamed},
+  pages		= {232},
+  publisher	= {S{\'i}ntesis},
+  title		= {Ling{\"u}{\'i}stica aplicada a la traducci{\'o}n},
+  year		= {2020}
+}
+
+@InCollection{	  mateu2016sv,
+  author	= {Mateu, Jaume},
+  booktitle	= {Enciclopedia de Ling{\"u}{\'i}stica Hisp{\'a}nica},
+  editor	= {Guti{\'e}rrez-Rexach, Javier},
+  pages		= {809-820},
+  publisher	= {Routledge},
+  title		= {Sintagma Verbal},
+  year		= {2016}
+}
+
+@InCollection{	  rivera2016predication,
+  author	= {Gonz{\'a}lez Rivera, Melvin},
+  booktitle	= {Enciclopedia de Ling{\"u}{\'i}stica Hisp{\'a}nica},
+  editor	= {Guti{\'e}rrez-Rexach, Javier},
+  pages		= {809-820},
+  publisher	= {Routledge},
+  title		= {Predicaci{\'o}n},
+  year		= {2016}
+}
+
 @InBook{	  dobrovie-sorin2012indefinite,
   address	= {Dordrecht},
   author	= {Dobrovie-Sorin, Carmen and Beyssade, Claire},
