--- a/curso-2019.bib
+++ b/curso-2019.bib
@@ -1,3 +1,31 @@
+@Article{Murphy2020Language-design,
+author = {Murphy, Elliot}, 
+editor = {}, 
+title = {Language design and communicative competence: The minimalist perspective}, 
+journal = {Glossa: a journal of general linguistics}, 
+volume = {5}, 
+number = {1}, 
+pages = {2}, 
+year = {2020}, 
+abstract = {Article: Language design and communicative competence: The minimalist perspective}, 
+location = {}, 
+keywords = {recursion; code model; speech control; intersubjectivity; primate cognition}}
+
+
+
+@Book{El-Madkouri2020Traduccion,
+author = {El-Madkouri Maataoui, Mohamed}, 
+title = {Lingüística aplicada a la traducción}, 
+volume = {}, 
+pages = {232}, 
+editor = {}, 
+publisher = {Síntesis}, 
+address = {Madrid}, 
+year = {2020}, 
+abstract = {}, 
+keywords = {Linguistic analysis; Translation; curso-lengua}}
+
+
 @InBook{Villa-Garcia2021La-linguistica,
 author = {Villa-García, Julio and Sánchez-Llana, Hugo}, 
 title = {La lingüística formal y la clase de L2: en pos de aunar teoría y práctica}, 
