--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,92 @@
 
+@Article{	  bade2021maximise,
+  author	= {Bade, Nadine},
+  journal	= {Language and Linguistics Compass},
+  number	= {6},
+  title		= {On the scope and nature of Maximise Presupposition},
+  volume	= {15},
+  year		= {2021}
+}
+
+@InBook{	  ludlow2019best,
+  address	= {Berlin},
+  author	= {Ludlow, Peter},
+  booktitle	= {Current Approaches to Syntax. A comparative framework},
+  editor	= {Kert{\'e}sz, Andr{\'a}s and Moravcsik, Edith and
+		  R{\'a}kosi, Csilla},
+  publisher	= {De Gruyter Mouton},
+  title		= {The philosophy of generative linguistics: best theory
+		  criteria},
+  year		= {2019}
+}
+
+@InBook{	  brody2008derivations,
+  author	= {Brody, Michael},
+  booktitle	= {Derivation and Explanation in the Minimalist Program},
+  editor	= {Epstein, Samuel David and Seely, T. Daniel},
+  pages		= {19-41},
+  publisher	= {Blackwell Publishers},
+  title		= {On the Status of Representations and Derivations},
+  year		= {2008}
+}
+
+@Article{	  putnam2011syntax,
+  author	= {Putnam, Michael T. and Stroik, Thomas},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {389--403},
+  title		= {Syntax at ground zero},
+  volume	= {37},
+  year		= {2011}
+}
+
+@Article{	  khoo2021if,
+  author	= {Khoo, Justin},
+  journal	= {Journal of Semantics},
+  title		= {Coordinating Ifs},
+  year		= {2021}
+}
+
+@Article{	  rett2021emotive,
+  author	= {Rett, Jessica},
+  journal	= {Journal of Semantics},
+  title		= {The Semantics of Emotive Markers and Other Illocutionary
+		  Content},
+  year		= {2021}
+}
+
+@Book{		  aguilar-guevara2014weak,
+  address	= {Amsterdam / Philadelphia},
+  editor	= {Aguilar-Guevara, Ana and Bruyn, Bert Le and Zwarts,
+		  Joost},
+  pages		= {395},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Weak Referentiality},
+  year		= {2014}
+}
+
+@Article{	  bross2021expressive,
+  author	= {Bross, Fabian},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {71},
+  title		= {On the interpretation of expressive adjectives: pragmatics
+		  or syntax},
+  volume	= {6},
+  year		= {2021}
+}
+
+@Article{	  dekier2021specific,
+  author	= {Dekier, Jakub},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {70},
+  title		= {Morphosyntax of specific and non-specific indefinite
+		  markers},
+  volume	= {6},
+  year		= {2021}
+}
+
 @Article{	  marty2021fc,
   author	= {Marty, Paul and Romoli, Jacopo},
   journal	= {Linguistics and Philosophy},
