--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,50 @@
 
+@Article{	  graff2001descriptions,
+  author	= {Graff, Delia},
+  journal	= {Philosophical Studies},
+  number	= {1},
+  pages		= {1--42},
+  title		= {Descriptions as predicates},
+  volume	= {102},
+  year		= {2001}
+}
+
+@PhDThesis{	  marty2017dp,
+  address	= {Cambidge, Mass.},
+  author	= {Marty, Paul},
+  school	= {Massachusetts Institute of Technology},
+  title		= {Implicatures in the DP domain},
+  year		= {2017}
+}
+
+@InBook{	  heusinger2019specificity,
+  author	= {von Heusinger, Klaus},
+  booktitle	= {Semantics - Noun Phrases and Verb Phrases},
+  editor	= {Portner, Paul and Heusinger, Klaus and Maienborn,
+		  Claudia},
+  publisher	= {De Gruyter},
+  title		= {Specificity},
+  year		= {2019}
+}
+
+@InBook{	  heim2019indefinite,
+  author	= {Heim, Irene},
+  booktitle	= {Semantics - Noun Phrases and Verb Phrases},
+  editor	= {Portner, Paul and Heusinger, Klaus and Maienborn,
+		  Claudia},
+  publisher	= {De Gruyter},
+  title		= {Definiteness and indefiniteness},
+  year		= {2019}
+}
+
+@Book{		  portner2019semantics,
+  editor	= {Portner, Paul and Heusinger, Klaus and Maienborn,
+		  Claudia},
+  publisher	= {De Gruyter},
+  title		= {Semantics - Noun Phrases and Verb Phrases},
+  year		= {2019}
+}
+
 @Article{	  bade2021maximise,
   author	= {Bade, Nadine},
   journal	= {Language and Linguistics Compass},
