--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,142 @@
 
+@Article{	  potts2009identity,
+  author	= {Potts, Christopher and Asudeh, Ash and Cable, Seth and
+		  Hara, Yurie and McCready, Eric and Alonso-Ovalle, Luis and
+		  Bhatt, Rajesh and Davis, Christopher and Kratzer, Angelika
+		  and Roeper, Tom and Walkow, Martin},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {356--366},
+  title		= {Expressives and Identity Conditions},
+  volume	= {40},
+  year		= {2009}
+}
+
+@Article{	  gutzmann2014intensifier,
+  author	= {Gutzmann, Daniel and Turgay, Katharina},
+  journal	= {The Journal of Comparative Germanic Linguistics},
+  number	= {3},
+  pages		= {185--228},
+  title		= {Expressive intensifiers and external degree modification},
+  volume	= {17},
+  year		= {2014}
+}
+
+@InBook{	  keshet2019dedicto,
+  author	= {Keshet, Ezra and Schwarz, Florian},
+  booktitle	= {The Oxford Handbook of Reference},
+  editor	= {Gundel, Jeanette and Abbott, Barbara},
+  pages		= {167-202},
+  publisher	= {Oxford University Press},
+  title		= {De Re/De Dicto},
+  year		= {2019}
+}
+
+@Article{	  coppock2012a,
+  author	= {Coppock, Elizabeth and Beaver, David},
+  journal	= {Proceedings of Semantics and Linguistic Theory},
+  pages		= {527},
+  title		= {Weak Uniqueness: The Only Difference Between Definites and
+		  Indefinites},
+  volume	= {22},
+  year		= {2012}
+}
+
+@InProceedings{	  bade2019uniqueness,
+  author	= {Bade, Nadine and Schwarz, Florian},
+  booktitle	= {Proceedings of the 41st Annual Conference of the Cognitive
+		  Science Society},
+  editor	= {Goel, A.K. and Seifert, C.M. and Freksa, C.},
+  pages		= {119-125},
+  publisher	= {Cognitive Science Society},
+  title		= {(In-)definites, (anti-)uniqueness, and uniqueness
+		  expectations},
+  year		= {2019}
+}
+
+@InBook{	  percus2006antipresupposition,
+  author	= {Percus, Orin},
+  booktitle	= {Theoretical and Empirical Studies of Reference and
+		  Anaphora: Toward the establishment of generative grammar as
+		  an empirical science},
+  editor	= {Ueyama, A.},
+  publisher	= {Japan Society for the Promotion of Science},
+  title		= {Antipresuppositions},
+  year		= {2006}
+}
+
+@InBook{	  schutze2005,
+  address	= {Berlin, New York},
+  author	= {Sch{\"u}tze, Carson T.},
+  booktitle	= {Linguistic Evidence},
+  editor	= {Kepser, Stephan and Reis, Marga},
+  pages		= {457-484},
+  publisher	= {Mouton de Gruyter},
+  title		= {Thinking About What We Are Asking Speakers to Do},
+  year		= {2005}
+}
+
+@InBook{	  sauerland2005,
+  address	= {Berlin, New York},
+  author	= {Sauerland, Uli and Anderssen, Jan and Yatsushiro, Kazuko},
+  booktitle	= {Linguistic Evidence},
+  editor	= {Kepser, Stephan and Reis, Marga},
+  pages		= {413-434},
+  publisher	= {Mouton de Gruyter},
+  title		= {The Plural is Semantically Unmarked},
+  year		= {2005}
+}
+
+@Book{		  kepser2005evidence,
+  address	= {Berlin, New York},
+  editor	= {Kepser, Stephan and Reis, Marga},
+  publisher	= {Mouton de Gruyter},
+  title		= {Linguistic Evidence},
+  year		= {2005}
+}
+
+@Article{	  beck2009comparison,
+  author	= {Beck, Sigrid and Krasikova, Sveta and Fleischer, Daniel
+		  and Gergel, Remus and Hofstetter, Stefan and Savelsberg,
+		  Christiane and Vanderelst, John and Villalta, Elisabeth},
+  journal	= {Linguistic Variation Yearbook 2009},
+  pages		= {1--66},
+  title		= {Crosslinguistic variation in comparison constructions},
+  volume	= {9},
+  year		= {2009}
+}
+
+@Article{	  cleml2019gradability,
+  author	= {Clem, Emily},
+  journal	= {Proceedings of Sinn und Bedeutung},
+  number	= {1},
+  pages		= {285--300},
+  title		= {Attributive adjectives in Tswefap: Vague predicates in a
+		  language with degrees},
+  volume	= {23},
+  year		= {2019}
+}
+
+@Article{	  deal2019crisp,
+  author	= {Deal, Amy Rose and Hohaus, Vera},
+  journal	= {Proceedings of Sinn und Bedeutung},
+  number	= {1},
+  pages		= {347--364},
+  title		= {Vague predicates, crisp judgments},
+  volume	= {23},
+  year		= {2019}
+}
+
+@Article{	  elliot2019ineffability,
+  author	= {Elliott, Patrick D. and Sauerland, Uli},
+  journal	= {Proceedings of Sinn und Bedeutung},
+  number	= {1},
+  pages		= {399--411},
+  title		= {Ineffability and Unexhaustification},
+  volume	= {23},
+  year		= {2019}
+}
+
 @Article{	  graff2001descriptions,
   author	= {Graff, Delia},
   journal	= {Philosophical Studies},
