--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Article{	  hoot2021subjects,
+  author	= {Hoot, Bradley and Ebert, Shane},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {73},
+  title		= {On the position of subjects in Spanish: Evidence from
+		  code-switching},
+  volume	= {6},
+  year		= {2021}
+}
+
+@Article{	  buccola2021alternatives,
+  author	= {Buccola, Brian and Kri{\v z}, Manuel and Chemla, Emmanuel},
+  journal	= {Linguistics and Philosophy},
+  title		= {Conceptual alternatives},
+  year		= {2021}
+}
+
 @Article{	  potts2009identity,
   author	= {Potts, Christopher and Asudeh, Ash and Cable, Seth and
 		  Hara, Yurie and McCready, Eric and Alonso-Ovalle, Luis and
