--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,69 @@
 
+@Book{		  herschensohn2001features,
+  address	= {Amsterdam},
+  editor	= {Herschensohn, Julia and Mall{\'e}n, Enrique and Zagona,
+		  Karen},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Features and Interfaces in Romance},
+  year		= {2001}
+}
+
+@InBook{	  bosque2001weight,
+  address	= {Amsterdam},
+  author	= {Bosque, Ignacio},
+  booktitle	= {Features and Interfaces in Romance: Current Issues in
+		  Linguistic Theory},
+  editor	= {Herschensohn, Julia and Mall{\'e}n, Enrique and Zagona,
+		  Karen},
+  pages		= {23},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {On the Weight of Light Predicates},
+  year		= {2001}
+}
+
+@Article{	  fernandez2008evidencialidad,
+  author	= {Fern{\'a}ndez, Susana S.},
+  journal	= {Revue Romane / Langue et litt{\'e}rature. International
+		  Journal of Romance Languages and Literatures},
+  number	= {2},
+  pages		= {217--234},
+  title		= {Generalizaciones y evidencialidad en espa{\~n}ol},
+  volume	= {43},
+  year		= {2008}
+}
+
+@Book{		  skinner1977,
+  address	= {Barcelona},
+  author	= {Skinner, Brian J},
+  publisher	= {Fontanella},
+  title		= {Sobre el conductismo},
+  year		= {1977}
+}
+
+@Book{		  bruner1986,
+  address	= {Barcelona},
+  author	= {Bruner, Jerome},
+  publisher	= {Barcelona : Paid{\'o}s},
+  title		= {El habla del ni{\~n}o : aprendiendo a usar el lenguaje},
+  year		= {1986}
+}
+
+@Book{		  vygotsky1974thought,
+  address	= {Cambridge, Massachusetts},
+  author	= {Vygotsky, Lev S.},
+  publisher	= {Masachusetts Institute of Technology},
+  title		= {Thought and language},
+  year		= {1974}
+}
+
+@Book{		  chomsky1986knowledge,
+  address	= {New York},
+  author	= {Chomsky, Noam},
+  publisher	= {New York: Praeger},
+  title		= {Knowledge of language : its nature, origin, and use},
+  year		= {1986}
+}
+
 @Article{	  hoot2021subjects,
   author	= {Hoot, Bradley and Ebert, Shane},
   journal	= {Glossa: a journal of general linguistics},
