--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Book{		  fabregas2021handbook,
+  editor	= {F{\'a}bregas, Antonio and Acedo-Matell{\'a}n, V{\'i}ctor
+		  and Amstrong, Grant and Cuervo, Mar{\'i}a Cristina and
+		  Pujol Payet, Isabel},
+  pages		= {608},
+  publisher	= {Routledge},
+  title		= {The Routledge Handbook of Spanish Morphology},
+  year		= {2021}
+}
+
+@Article{	  terzian2021playground,
+  author	= {Terzian, Giulia},
+  journal	= {Stud Hist Philos Sci},
+  pages		= {1--12},
+  title		= {Chomsky in the playground: Idealization in generative
+		  linguistics.},
+  volume	= {87},
+  year		= {2021}
+}
+
 @Book{		  herschensohn2001features,
   address	= {Amsterdam},
   editor	= {Herschensohn, Julia and Mall{\'e}n, Enrique and Zagona,
