--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  beltrama2021perfect,
+  author	= {Beltrama, Andrea},
+  journal	= {Linguistics and Philosophy},
+  title		= {Just perfect, simply the best: an analysis of emphatic
+		  exclusion},
+  year		= {2021}
+}
+
 @Book{		  fabregas2021handbook,
   editor	= {F{\'a}bregas, Antonio and Acedo-Matell{\'a}n, V{\'i}ctor
 		  and Amstrong, Grant and Cuervo, Mar{\'i}a Cristina and
