--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,44 @@
 
+@Article{	  hinterwimmerebert2019,
+  author	= {Hinterwimmer, Stefan and Ebert, Cornelia},
+  journal	= {Proceedings of Sinn und Bedeutung},
+  number	= {1},
+  pages		= {469--486},
+  title		= {A comparison of 'fei' and 'aber'},
+  volume	= {22},
+  year		= {2019}
+}
+
+@InCollection{	  grosz2015information,
+  author	= {Grosz, Patrick G.},
+  booktitle	= {The Oxford Handbook of Information Structure},
+  editor	= {F{\'e}ry, Caroline and Ishihara, Shinichiro},
+  publisher	= {Oxford University Press},
+  title		= {Information Structure and Discourse Particles},
+  year		= {2015}
+}
+
+@InCollection{	  zimmermann2011discourse,
+  author	= {Zimmermann, Malte},
+  booktitle	= {Semantics: An International Handbook of Natural Language
+		  Meaning},
+  editor	= {Maienborn, Claudia and Heusinger, Klaus von and Portner,
+		  Paul},
+  pages		= {2012-2038},
+  publisher	= {De Gruyter},
+  title		= {Discourse particles},
+  year		= {2011}
+}
+
+@InCollection{	  grosz2020discourse,
+  author	= {Grosz, Patrick G.},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-34},
+  publisher	= {Wiley},
+  title		= {Discourse Particles},
+  year		= {2020}
+}
+
 @Article{	  beltrama2021perfect,
   author	= {Beltrama, Andrea},
   journal	= {Linguistics and Philosophy},
