--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,130 @@
 
+@Book{		  bentley2015existential,
+  author	= {Bentley, Delia and Ciconte, Francisco Maria and Cruschina,
+		  Silvio},
+  pages		= {320},
+  publisher	= {Oxford University Press, USA},
+  title		= {Existentials and Locatives in Romance Dialects of Italy},
+  year		= {2015}
+}
+
+@Article{	  hazout2004,
+  author	= {Hazout, Ilan},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {393--430},
+  title		= {The Syntax of Existential Constructions},
+  volume	= {35},
+  year		= {2004}
+}
+
+@InCollection{	  ramagliafrascarelli2019,
+  author	= {Ramaglia, Francesca and Frascarelli, Mara},
+  booktitle	= {Linguistic Variation: Structure and Interpretation},
+  editor	= {Franco, Ludovico and Lorusso, Paolo},
+  pages		= {561-598},
+  publisher	= {De Gruyter Mouton},
+  title		= {The (information) structure of existentials},
+  year		= {2019}
+}
+
+@Article{	  villalba2013existential,
+  author	= {Villalba, Xavier},
+  journal	= {Rivista di Linguistica},
+  number	= {1},
+  pages		= {147--173},
+  title		= {Eventive existentials in Catalan and the topic-focus
+		  articulation},
+  volume	= {25},
+  year		= {2013}
+}
+
+@Article{	  brown2012existence,
+  author	= {Brown, Esther L. and Rivas, Javier},
+  journal	= {Language Variation and Change},
+  number	= {3},
+  pages		= {317--341},
+  title		= {Grammatical relation probability: How usage patterns shape
+		  analogy},
+  volume	= {24},
+  year		= {2012}
+}
+
+@Book{		  boeckx2006a,
+  address	= {Amsterdam},
+  editor	= {Boeckx, Cedric},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Minimalist Essays},
+  year		= {2006}
+}
+
+@InCollection{	  rodriguez-mondonedo2006,
+  address	= {Amsterdam},
+  author	= {Rodr{\'i}guez-Mondo{\~n}edo, Miguel},
+  booktitle	= {Minimalist Essays},
+  editor	= {Boeckx, Cedric},
+  pages		= {326-394},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Spanish existentials and other accusative constructions},
+  year		= {2006}
+}
+
+@Book{		  hoegmuller2008,
+  address	= {Amsterdam},
+  editor	= {H{\o}eg M{\"u}ller, Henrik and Klinge, Alex},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Essays on Nominal Determination},
+  year		= {2008}
+}
+
+@InCollection{	  leonetti2008definiteness,
+  address	= {Amsterdam},
+  author	= {Leonetti, Manuel},
+  booktitle	= {Essays on Nominal Determination},
+  editor	= {H{\o}eg M{\"u}ller, Henrik and Klinge, Alex},
+  pages		= {131-162},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Definiteness effect and the role of the coda in
+		  existential constructions},
+  year		= {2008}
+}
+
+@InCollection{	  matthewson2020evidentiality,
+  author	= {Matthewson, Lisa},
+  booktitle	= {Evidentials and Modals},
+  editor	= {Lee, Chungmin and Park, Jinho},
+  pages		= {82-120},
+  title		= {Evidence type, evidence location, evidence strength},
+  year		= {2020}
+}
+
+@Book{		  snippets2019,
+  editor	= {Nicolae, Andreea C. and Elliot, Patrick D. and Sudo,
+		  Yasutada},
+  title		= {Snippets. Issue 37. Special Issue in honor of Uli
+		  Saulerland},
+  year		= {2019}
+}
+
+@Article{	  mattewson2018tense,
+  author	= {Rullman, Hotze and Matthewson, Lisa},
+  journal	= {Language},
+  number	= {2},
+  pages		= {281--331},
+  title		= {Towards A Theory of Modal-Temporal Interaction},
+  volume	= {94},
+  year		= {2018}
+}
+
+@Article{	  matthewson2013uncover,
+  author	= {Matthewson, Lisa},
+  journal	= {Proceedings of NELS},
+  pages		= {323--342},
+  title		= {On How (Not) To Uncover Cross-Linguistic Variation},
+  volume	= {42},
+  year		= {2013}
+}
+
 @Article{	  hinterwimmerebert2019,
   author	= {Hinterwimmer, Stefan and Ebert, Cornelia},
   journal	= {Proceedings of Sinn und Bedeutung},
