--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,148 @@
 
+@InBook{	  hernandezdiaz2006posesion,
+  address	= {M{\'e}xico},
+  author	= {Hern{\'a}ndez D{\'i}az, Axel},
+  booktitle	= {Sintaxis hist{\'o}rica de la lengua espa{\~n}ola. Primera
+		  parte: la frase verbal},
+  editor	= {Company Company, Concepci{\'o}n},
+  pages		= {1055-1160},
+  publisher	= {FCE-UNAM},
+  title		= {Posesi{\'o}n y existencia. La competencia de haber y tener
+		  y haber existencial},
+  year		= {2006}
+}
+
+@Book{		  company2006sintaxisfv02,
+  address	= {M{\'e}xico},
+  editor	= {Company Company, Concepci{\'o}n},
+  publisher	= {FCE-UNAM},
+  title		= {Sintaxis hist{\'o}rica de la lengua espa{\~n}ola. Primera
+		  parte: la frase verbal},
+  volume	= {2},
+  year		= {2006}
+}
+
+@Book{		  company2006sintaxisfv01,
+  address	= {M{\'e}xico},
+  editor	= {Company Company, Concepci{\'o}n},
+  publisher	= {FCE-UNAM},
+  title		= {Sintaxis hist{\'o}rica de la lengua espa{\~n}ola. Primera
+		  parte: la frase verbal},
+  volume	= {1},
+  year		= {2006}
+}
+
+@Article{	  bentivoglio1989haber,
+  author	= {Bentivoglio, Paola and Sedano, Mercedes},
+  journal	= {Estudios sobre Espa{\~n}ol de Am{\'e}rica y
+		  Ling{\"u}{\'i}stica Afroamericana. Ponencias presentadas en
+		  el 45 Congreso Internacional de Hispanistas},
+  pages		= {59--81},
+  title		= {Haber. ¿Un verbo impersonal?},
+  volume	= {Publicaciones del Instituto Caro y Cuervo, LXXXIII},
+  year		= {1989}
+}
+
+@InBook{	  mendikoetxea1999se,
+  address	= {Madrid},
+  author	= {Mendikoetxea, Amaya},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  pages		= {1575-1627},
+  publisher	= {RAE Espasa},
+  title		= {Construcciones inacusativas y pasivas},
+  year		= {1999}
+}
+
+@InBook{	  fernandezsoriano1999impersonal,
+  address	= {Madrid},
+  author	= {Fern{\'a}ndez Soriano, Olga and T{\'a}boas, Susana},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  pages		= {1723-1778},
+  publisher	= {RAE Espasa},
+  title		= {Construcciones impersonales no reflejas},
+  year		= {1999}
+}
+
+@Article{	  gomezdevis2020,
+  author	= {G{\'o}mez Dev{\'i}s, Mar{\'i}a Bego{\~n}a and G{\'o}mez
+		  Molina, Jos{\'e} Ram{\'o}n},
+  journal	= {Spanish in Context},
+  number	= {2},
+  pages		= {273--293},
+  title		= {The agreement of existential haber in three varieties of
+		  spoken Spanish},
+  volume	= {17},
+  year		= {2020}
+}
+
+@Article{	  ramos-alfajarin2001haverhi,
+  author	= {Ramos Alfajar{\'i}n, Joan-Rafael},
+  journal	= {Estudis rom{\`a}nics},
+  pages		= {123--146},
+  title		= {El verb haver-hi: evoluci{\'o} dels usos sint{\`a}ctics},
+  volume	= {23},
+  year		= {2001}
+}
+
+@Article{	  demello1994haber,
+  author	= {DeMello, George},
+  journal	= {Studia Neophilologica},
+  number	= {1},
+  pages		= {77--91},
+  title		= {Pluralizaci{\'o}n del Verbo ``Haber'' impersonal en el
+		  Espa{\~n}ol Hablado Culto},
+  volume	= {66},
+  year		= {1994}
+}
+
+@Article{	  diazcampos1999haber,
+  author	= {D{\'i}az-Campos, Manuel},
+  journal	= {Anuario de Ling{\"u}{\'i}stica Hisp{\'a}nica},
+  pages		= {235--245},
+  title		= {La pluralizaci{\'o}n del verbo haber en dos {\'a}reas
+		  dialectales de Hispanoam{\'e}rica},
+  volume	= {15-16},
+  year		= {1999}
+}
+
+@Article{	  paredes2016haber,
+  author	= {Paredes, Florentino},
+  journal	= {Bolet{\'i}n de Filolog{\'i}a},
+  number	= {2},
+  pages		= {209--234},
+  title		= {La pluralizaci{\'o}n del verbo haber existencial en
+		  Madrid: ¿etapas iniciales de un cambio ling{\"u}{\'i}stico?},
+  volume	= {51},
+  year		= {2016}
+}
+
+@Article{	  hernadezcabrera2016haber,
+  author	= {Hern{\'a}ndez Cabrera, Clara Eugenia},
+  journal	= {ELUA. Estudios de Ling{\"u}{\'i}stica Universidad de
+		  Alicante},
+  number	= {7},
+  title		= {Variaci{\'o}n de haber impersonal en el espa{\~n}ol de Las
+		  Palmas de Gran Canaria},
+  volume	= {30},
+  year		= {2016}
+}
+
+@Article{	  jain2021,
+  author	= {Jain, Kate Hazel},
+  journal	= {Linguistics and Philosophy},
+  title		= {You Hoboken! Semantics of an expressive label maker},
+  year		= {2021}
+}
+
+@Article{	  anvari2021,
+  author	= {Anvari, Amir and Blumberg, Kyle},
+  journal	= {Journal of Semantics},
+  title		= {Subclausal Local Contexts},
+  year		= {2021}
+}
+
 @Book{		  bentley2015existential,
   author	= {Bentley, Delia and Ciconte, Francisco Maria and Cruschina,
 		  Silvio},
