--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,113 @@
 
+@InBook{	  claes2016haber,
+  address	= {Frankfurt},
+  author	= {Claes, Jeroen},
+  booktitle	= {En torno a haber: construcciones, usos y variaci{\'o}n
+		  desde el lat{\'i}n hasta la actualidad},
+  editor	= {Benito Moreno, Carlota de and Octavio de Toledo y Huerta,
+		  {\'A}lvaro S.},
+  pages		= {169-190},
+  publisher	= {Peter Lang},
+  title		= {La pluralizaci{\'o}n de haber presentacional en el
+		  espa{\~n}ol de La Habana: interacci{\'o}n entre las
+		  restricciones cognitivas},
+  year		= {2016}
+}
+
+@InBook{	  lluch2016habemos,
+  address	= {Frankfurt},
+  author	= {Castillo Lluch, M{\'o}nica and Octavio de Toledo y Huerta,
+		  {\'A}lvaro S.},
+  booktitle	= {En torno a haber: construcciones, usos y variaci{\'o}n
+		  desde el lat{\'i}n hasta la actualidad},
+  editor	= {Benito Moreno, Carlota de and Octavio de Toledo y Huerta,
+		  {\'A}lvaro S.},
+  pages		= {111-168},
+  publisher	= {Peter Lang},
+  title		= {Habemos muchos que hablamos espa{\~n}ol: distribuci{\'o}n
+		  e historia de la concordancia existencial en primera
+		  persona de plural},
+  year		= {2016}
+}
+
+@Book{		  benitooctavio2016,
+  address	= {Frankfurt},
+  editor	= {Benito Moreno, Carlota de and Octavio de Toledo y Huerta,
+		  {\'A}lvaro S.},
+  publisher	= {Peter Lang},
+  title		= {En torno a haber: construcciones, usos y variaci{\'o}n
+		  desde el lat{\'i}n hasta la actualidad},
+  year		= {2016}
+}
+
+@InBook{	  pato2016haber,
+  address	= {Frankfurt},
+  author	= {Pato, Enrique},
+  booktitle	= {En torno a haber: construcciones, usos y variaci{\'o}n
+		  desde el lat{\'i}n hasta la actualidad},
+  editor	= {Benito Moreno, Carlota de and Octavio de Toledo y Huerta,
+		  {\'A}lvaro S.},
+  pages		= {357-391},
+  publisher	= {Peter Lang},
+  title		= {La pluralizaci{\'o}n de haber en el espa{\~n}ol peninsular},
+  year		= {2016}
+}
+
+@InBook{	  benito2016haber,
+  address	= {Frankfurt},
+  author	= {Benito Moreno, Carlota de},
+  booktitle	= {En torno a haber: construcciones, usos y variaci{\'o}n
+		  desde el lat{\'i}n hasta la actualidad},
+  editor	= {Benito Moreno, Carlota de and Octavio de Toledo y Huerta,
+		  {\'A}lvaro S.},
+  pages		= {209-237},
+  publisher	= {Peter Lang},
+  title		= {La pronominalizaci{\'o}n en las construcciones
+		  existenciales con haber: ¿hay restricciones o no las hay?},
+  year		= {2016}
+}
+
+@Article{	  montesoca1994haber,
+  author	= {Montes de Oca, Mar{\'i}a del Pilar},
+  journal	= {Anuario de Letras},
+  pages		= {7--35},
+  title		= {La concordancia con haber impresonal},
+  volume	= {32},
+  year		= {1994}
+}
+
+@Article{	  bouzouitapato2019haber,
+  author	= {Bouzouita, Miriam and Pato, Enrique},
+  journal	= {Revue de Linguistique Romane},
+  pages		= {137--165},
+  title		= {Antes hab{\'i}a(n) pozos en el pueblo: La
+		  pluralizaci{\'o}n del verbo haber existencial en
+		  espa{\~n}ol rural europeo},
+  volume	= {83},
+  year		= {2019}
+}
+
+@Article{	  luquemoreno1978haber,
+  author	= {Luque Moreno, Javier},
+  journal	= {Revista Espa{\~n}ola de Ling{\"u}{\'i}stica},
+  number	= {1},
+  pages		= {125--148},
+  title		= {En torno al sintagma haber impersonal + sustantivo y sus
+		  or{\'i}genes latinos},
+  volume	= {8},
+  year		= {1978}
+}
+
+@Article{	  montes1982haber,
+  author	= {Montes Giraldo, Jos{\'e} Joaqu{\'i}n},
+  journal	= {Thesaurus: Bolet{\'i}n del Instituto Caro y Cuervo},
+  number	= {2},
+  pages		= {383--385},
+  title		= {Sobre el sintagma haber + sustantivo},
+  volume	= {37},
+  year		= {1982}
+}
+
 @InBook{	  hernandezdiaz2006posesion,
   address	= {M{\'e}xico},
   author	= {Hern{\'a}ndez D{\'i}az, Axel},
