--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,54 @@
 
+@Article{	  rigau2020hi,
+  author	= {Rigau, Gemma},
+  journal	= {Caplletra. Revista Internacional de Filologia},
+  number	= {68},
+  pages		= {99},
+  title		= {Pres{\`e}ncia i abs{\`e}ncia del cl{\'i}tic locatiu hi},
+  year		= {2020}
+}
+
+@Article{	  rosenblat1950,
+  author	= {Rosenblat, {\'A}ngel},
+  journal	= {Nueva Revista de Filolog{\'i}a Hisp{\'a}nica (NRFH)},
+  number	= {1},
+  pages		= {57--67},
+  title		= {Charles E. Kany, American-Spanish syntax. University of
+		  Chicago Press, Chicago, Illinois, 1945.},
+  volume	= {4},
+  year		= {1950}
+}
+
+@Book{		  kany1945,
+  address	= {Chicago},
+  author	= {Kany, Charles E.},
+  publisher	= {Chicago University Pres},
+  title		= {Spansih-American Syntax},
+  year		= {1945}
+}
+
+@Article{	  longa1998recycling,
+  author	= {Longa, V{\'i}ctor M. and Lorenzo, Guillermo and Rigau,
+		  Gemma},
+  journal	= {Journal of Linguistics},
+  number	= {1},
+  pages		= {125--164},
+  title		= {Subject Clitics and Clitic Recycling: Locative Sentences
+		  in Some Iberian Romance Languages},
+  volume	= {34},
+  year		= {1998}
+}
+
+@Article{	  fernandezsoriano1999locative,
+  author	= {Fernandez-Soriano, Olga},
+  journal	= {Syntax},
+  pages		= {101--140},
+  title		= {Two Types of Impersonal Sentences in Spanish: Locative and
+		  Dative Subjects},
+  volume	= {2},
+  year		= {1999}
+}
+
 @InBook{	  claes2016haber,
   address	= {Frankfurt},
   author	= {Claes, Jeroen},
