--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,36 @@
 
+@Article{	  sasse1987thetic,
+  author	= {Sasse, Hans-J{\"u}rgen},
+  journal	= {Linguistics},
+  number	= {3},
+  title		= {The thetic-categorical distinction revisited},
+  volume	= {25},
+  year		= {1987}
+}
+
+@Article{	  basilico2003topic,
+  author	= {Basilico, David},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {1--35},
+  title		= {The Topic of Small Clauses},
+  volume	= {34},
+  year		= {2003}
+}
+
+@InCollection{	  borschev2002existential,
+  address	= {Amsterdam},
+  author	= {Borschev, Vladimir and Partee, Barbara H.},
+  booktitle	= {Prague Linguistic Circle Papers / Travaux du cercle
+		  linguistique de Prague N.S.: Prague Linguistic Circle
+		  Papers},
+  pages		= {185-250},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {The Russian genitive of negation in existential
+		  sentences},
+  year		= {2002}
+}
+
 @Article{	  rigau2020hi,
   author	= {Rigau, Gemma},
   journal	= {Caplletra. Revista Internacional de Filologia},
