--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,105 @@
 
+@Book{		  scheffler2013,
+  author	= {Scheffler, Tatjana},
+  pages		= {188},
+  publisher	= {De Gruyter Mouton},
+  title		= {Two-dimensional Semantics},
+  year		= {2013}
+}
+
+@InBook{	  doring2013modal,
+  author	= {D{\"o}ring, Sophia},
+  booktitle	= {Beyond Expressives: Explorations in Use-Conditional
+		  Meaning},
+  editor	= {Gutzmann, Daniel and G{\"a}rtner, Hans-Martin},
+  publisher	= {Brill Academic Pub},
+  title		= {Modal Particles and Context Shift},
+  year		= {2013}
+}
+
+@Book{		  gutzmann2013beyond,
+  editor	= {Gutzmann, Daniel and G{\"a}rtner, Hans-Martin},
+  pages		= {322},
+  publisher	= {Brill Academic Pub},
+  title		= {Beyond Expressives: Explorations in Use-Conditional
+		  Meaning},
+  year		= {2013}
+}
+
+@Book{		  portner2009modality,
+  author	= {Portner, Paul},
+  pages		= {302},
+  publisher	= {OUP Oxford},
+  title		= {Modality},
+  year		= {2009}
+}
+
+@Article{	  malaver1999hubieron,
+  author	= {Malaver, Irania},
+  journal	= {Lingua Americana III},
+  pages		= {26--42},
+  title		= {Estudio de conciencia ling{\"u}{\'i}stica sobre hubieron},
+  volume	= {5},
+  year		= {1999}
+}
+
+@Article{	  espinal2011bare,
+  author	= {Espinal, M. Teresa and McNally, Louise},
+  journal	= {Journal of Linguistics},
+  number	= {1},
+  pages		= {87--128},
+  title		= {Bare nominals and incorporating verbs in Spanish and
+		  Catalan},
+  volume	= {47},
+  year		= {2011}
+}
+
+@Article{	  ramos-alfajarin1998presentational,
+  author	= {Ramos Alfajar{\'i}n, Joan-Rafael},
+  journal	= {Catalan Working Papers in Linguistics},
+  pages		= {41--58},
+  title		= {Presentational Sentences in Catalan Dialects},
+  volume	= {6},
+  year		= {1998}
+}
+
+@InBook{	  trevino2003haber,
+  author	= {Trevi{\~n}o, Esthela},
+  booktitle	= {Linguistic Theory and Language Developtnent in Hispanic
+		  Languages},
+  editor	= {Montrul, Silvia and Ordo{\~n}ez, Francisco},
+  pages		= {178-192},
+  title		= {On the Subjecthood Issue of Existential Haber},
+  year		= {2003}
+}
+
+@Article{	  rigau1997hi,
+  author	= {Rigau, Gemma},
+  journal	= {ASJU},
+  pages		= {395--421},
+  title		= {Locative sentences and related constructions in catalan:
+		  esser- haver alternation},
+  volume	= {40},
+  year		= {1997}
+}
+
+@InBook{	  kayne2010expletive,
+  author	= {Kayne, Richard S.},
+  booktitle	= {Comparisons and Contrasts},
+  publisher	= {Oxford University Press on Demand},
+  title		= {Expletives, Datives, and the Tension between Morphology
+		  and Syntax},
+  year		= {2010}
+}
+
+@Book{		  kayne2010comparisons,
+  author	= {Kayne, Richard S.},
+  pages		= {272},
+  publisher	= {Oxford University Press on Demand},
+  title		= {Comparisons and Contrasts},
+  year		= {2010}
+}
+
 @Unpublished{	  kratzermatthewson2009,
   author	= {Kratzer, Angelika and Matthewson, Lisa},
   title		= {Anatomy of two discourse particles},
