--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,137 @@
 
+@InBook{	  demonte2014evidentiality,
+  author	= {Demonte, Violeta and Fern{\'a}ndez-Soriano, Olga},
+  booktitle	= {Left Sentence Peripheries in Spanish: Diachronic,
+		  Variationist, and Typological Perspectives},
+  editor	= {Duffer, Andreas and Octavio de Toledo y Huerta, {\'A}lvaro
+		  S.},
+  pages		= {217-252},
+  title		= {Evidentiality and illocutionary force: Spanish matrix que
+		  at the syntax-pragmatics interface},
+  year		= {2014}
+}
+
+@InBook{	  sanchezlopez2017ojala,
+  author	= {S{\'a}nchez L{\'o}pez, Cristina},
+  booktitle	= {Advances in the Analysis of Spanish Exclamatives},
+  editor	= {Bosque, Ignacio},
+  pages		= {82-107},
+  publisher	= {Theoretical Developments in Hi},
+  title		= {Optative sentences in Spanish},
+  year		= {2017}
+}
+
+@Book{		  bosque2017exclamative,
+  editor	= {Bosque, Ignacio},
+  pages		= {223},
+  publisher	= {Theoretical Developments in Hi},
+  title		= {Advances in the Analysis of Spanish Exclamatives},
+  year		= {2017}
+}
+
+@InBook{	  laca2010mood,
+  author	= {Laca, Brenda},
+  booktitle	= {Mood in the Languages of Europe},
+  editor	= {Rothstein, Bj{\"o}rn and Thieroff, Rolf},
+  publisher	= {John Benjamins Publishing},
+  title		= {Mood in Spanish},
+  year		= {2010}
+}
+
+@Book{		  rothstein2010mood,
+  editor	= {Rothstein, Bj{\"o}rn and Thieroff, Rolf},
+  pages		= {647},
+  publisher	= {John Benjamins Publishing},
+  title		= {Mood in the Languages of Europe},
+  year		= {2010}
+}
+
+@Book{		  lyons1977vol2,
+  author	= {Lyons, John},
+  publisher	= {Cambridge University Press},
+  title		= {Semantics},
+  volume	= {2},
+  year		= {1977}
+}
+
+@Book{		  lyons1977vol1,
+  author	= {Lyons, John},
+  publisher	= {Cambridge University Press},
+  title		= {Semantics},
+  volume	= {1},
+  year		= {1977}
+}
+
+@Book{		  abraham2020modality,
+  author	= {Abraham, Werner},
+  publisher	= {Cambridge University Press},
+  title		= {Modality in Syntax, Semantics and Pragmatics},
+  year		= {2020}
+}
+
+@Article{	  archiletras2020,
+  journal	= {Archiletras},
+  title		= {¿Qui{\'e}n te ha ense{\~n}ado a hablar as{\'i}?},
+  volume	= {9},
+  year		= {2020}
+}
+
+@Article{	  ornat2011,
+  author	= {L{\'o}pez-Ornat, Susana},
+  journal	= {Revista de investigaci{\'o}n en Logopedia},
+  number	= {1},
+  title		= {La adquisici{\'o}n del lenguaje, un resumen en 2011},
+  volume	= {1},
+  year		= {2011}
+}
+
+@Article{	  bel2003cognitiva,
+  author	= {Bel, Aurora},
+  journal	= {Cognitiva},
+  number	= {1},
+  title		= {El porqu{\'e}  de las cosas. A prop{\'o}sito de la
+		  adquisici{\'o}n de la gram{\'a}tica},
+  volume	= {15},
+  year		= {2003}
+}
+
+@Article{	  munozliceras2001,
+  author	= {Mu{\~n}oz Liceras, Juana},
+  journal	= {Cognitiva},
+  number	= {1},
+  title		= {Se hace camino al {\ldots} investigar},
+  volume	= {15},
+  year		= {2003}
+}
+
+@Book{		  bel2001adquisicio,
+  address	= {Barcelona},
+  author	= {Bel, Aurora},
+  publisher	= {IEC},
+  title		= {Teoria ling{\"u}{\'i}stica i adquisici{\'o} del llenguatge
+		  : an{\`a}lisi comparada dels trets morfol{\`o}gics en
+		  catal{\`a} i en castell{\`a}},
+  year		= {2001}
+}
+
+@Article{	  torrens2001innate,
+  author	= {Torrens, Vicen{\c c}},
+  journal	= {Aloma: revista de psicologia, ci{\`e}ncies de
+		  l'educaci{\'o} i de l'esport Blanquerna},
+  pages		= {79--87},
+  title		= {Les teories innatistes en l'adquisici{\'o} del llenguatge},
+  volume	= {8},
+  year		= {2001}
+}
+
+@Book{		  montrul2004acquisition,
+  author	= {Montrul, Silvina},
+  pages		= {411},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {The Acquisition of Spanish},
+  year		= {2004}
+}
+
 @Book{		  scheffler2013,
   author	= {Scheffler, Tatjana},
   pages		= {188},
