--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@InCollection{	  ackerman2018coreference,
+  address	= {Salt Lake City, UT},
+  author	= {Ackerman, Lauren and Riches, Nick and Wallenberg, Joel},
+  booktitle	= {92nd Annual Meeting of the Linguistic Society of America},
+  publisher	= {LSA},
+  title		= {Coreference dependency formation is modulated by
+		  experience with variation of human gender},
+  year		= {2018}
+}
+
+@Article{	  papadopoulos2019gender,
+  author	= {Papadopoulos, Benjamin},
+  journal	= {Bachelor's thesis. University of Berkeley},
+  title		= {Morphological Gender Innovations in Spanish of Genderqueer
+		  Speakers/Innovaciones al g{\'e}nero morfol{\'o}gico en el
+		  espa{\~n}ol de hablantes genderqueer},
+  year		= {2019}
+}
+
+@Article{	  konnelly2020gender,
+  author	= {Konnelly, Lex and Cowper, Elizabeth},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Gender diversity and morphosyntax: An account of singular
+		  they},
+  volume	= {5},
+  year		= {2020}
+}
+
 @InBook{	  demonte2014evidentiality,
   author	= {Demonte, Violeta and Fern{\'a}ndez-Soriano, Olga},
   booktitle	= {Left Sentence Peripheries in Spanish: Diachronic,
